apps/base/nextcloud/ingressroute-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-internal
  namespace: apps
spec:
  entryPoints:
    - websecure-int
  routes:
    - match: Host(`cloud.local.kagiso.me`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
  tls: {}
