apps/base/nextcloud/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.kagiso.me`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
  tls: {}
